<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Transaksi">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/roundedcorner_bottomonly_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextToShow_TitleHistoriTransaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/history_transaksi_kamu"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ButtomButtonLayout"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="10dp">

        <ListView
            android:id="@+id/ShowListTransaksi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtomButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundedcorner_toponly_bg"
        android:orientation="horizontal">

        <Button
            android:id="@+id/TombolSort"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Clickalble"
            android:shadowRadius="5"
            android:text="@string/sort"
            android:textColor="#000000"
            app:cornerRadius="10dp"
            app:icon="@drawable/icon_sort"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/TombolFilter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Clickalble"
            android:shadowRadius="5"
            android:text="@string/filter"
            android:textColor="#000000"
            app:cornerRadius="10dp"
            app:icon="@drawable/icon_filter"
            app:iconTint="@color/black" />
    </LinearLayout>


</RelativeLayout>