<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Credential_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LayutBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Gambar_BannerAplikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/banner_aplikasirev2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LayutBanner"
        android:orientation="vertical">

        <EditText
            android:id="@+id/KolomIsi_Nama"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_layout_bg"
            android:backgroundTint="@color/Background"
            android:ems="10"
            android:hint="Nama"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextBuatEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_layout_bg"
            android:backgroundTint="@color/Background"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/KolomIsi_Password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_layout_bg"
            android:backgroundTint="@color/Background"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autoText="false"
            android:background="@drawable/rounded_layout_bg"
            android:backgroundTint="@color/Background"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutLainnya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LayoutForm"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/Tombol_BuatAkun"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/Clickalble"
            android:text="@string/create"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/terms_and_condition" />

        <TextView
            android:id="@+id/Tombol_KalauSudahPunyaAkun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/already_a_user_sign_in_now"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>